fix: stop repositioning page when vertical scrollbar

--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -2,6 +2,10 @@
 @import 'theme/sneat-theme-default.min.css';
 @import 'icons';
 
+html {
+  margin-left: calc(100vw - 100%);
+}
+
 .container-sm {
   max-width: 700px;
 
